src/test/ui/const-generics/invalid-constant-in-args.stderr
error[E0107]: wrong number of generic arguments: expected 1, found 2
  --> $DIR/invalid-constant-in-args.rs:2:22
   |
LL |     let _: Vec<&str, "a"> = Vec::new();
   |                      ^^^ unexpected const argument

error: aborting due to previous error

For more information about this error, try `rustc --explain E0107`.
